// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventsPanel renders 1`] = `
<FlyoutPanel
  title="Events"
>
  <EuiBasicTable
    columns={
      Array [
        Object {
          "field": "title",
          "name": "State",
          "width": "50%",
        },
        Object {
          "field": "date",
          "name": "Time",
          "render": [Function],
          "width": "50%",
        },
      ]
    }
    items={
      Array [
        Object {
          "date": "2022-10-24T02:44:19.660365+00:00",
          "title": "Canceled",
        },
        Object {
          "date": "2022-10-24T02:44:19.660365+00:00",
          "title": "Cancelation requested",
        },
        Object {
          "date": "2022-10-24T02:44:19.660365+00:00",
          "title": "Completed",
        },
        Object {
          "date": "2022-10-24T02:44:19.660365+00:00",
          "title": "Last updated",
        },
        Object {
          "date": "2022-10-24T02:44:19.660365+00:00",
          "title": "Sync started",
        },
        Object {
          "date": "2022-10-24T02:44:19.660365+00:00",
          "title": "Sync requested manually",
        },
      ]
    }
    noItemsMessage={
      <EuiI18n
        default="No items found"
        token="euiBasicTable.noItemsMessage"
      />
    }
    tableLayout="fixed"
  />
</FlyoutPanel>
`;

exports[`EventsPanel renders with some values missing 1`] = `
<FlyoutPanel
  title="Events"
>
  <EuiBasicTable
    columns={
      Array [
        Object {
          "field": "title",
          "name": "State",
          "width": "50%",
        },
        Object {
          "field": "date",
          "name": "Time",
          "render": [Function],
          "width": "50%",
        },
      ]
    }
    items={
      Array [
        Object {
          "date": "2022-10-24T02:44:19.660365+00:00",
          "title": "Canceled",
        },
        Object {
          "date": "2022-10-24T02:44:19.660365+00:00",
          "title": "Completed",
        },
        Object {
          "date": "2022-10-24T02:44:19.660365+00:00",
          "title": "Last updated",
        },
        Object {
          "date": "2022-10-24T02:44:19.660365+00:00",
          "title": "Sync started",
        },
        Object {
          "date": "2022-10-24T02:44:19.660365+00:00",
          "title": "Sync requested manually",
        },
      ]
    }
    noItemsMessage={
      <EuiI18n
        default="No items found"
        token="euiBasicTable.noItemsMessage"
      />
    }
    tableLayout="fixed"
  />
</FlyoutPanel>
`;
